--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             width: 40%;
             font-family: sans-serif;
             background-color: #fff;
-            width: 350px;
+            width: 360px;
             color: #777;
             overflow: auto;
             z-index: 10;
@@ -68,7 +68,7 @@
 <body style="margin: 0px">
 
 
-    <div style="background-color: #a2dbd8;width:100vw;margin:" 0";position: relative;">
+    <div style="background-color: #a2dbd8;width:100vw;margin:0;position: relative;">
         <img src="./world.svg" alt="map" width="90%" height="auto">
 
         <div id="school-list">
@@ -119,24 +119,24 @@
             var cardname = "";
 
             var text = '{"uwc":[' +
-                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"10","left":"10","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right" },' +
-                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"10","left":"20","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right"},' +
-                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"10","left":"30","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg","position":"right" },' +
-                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"10","left":"40","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" ,"position":"right"},' +
-                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"10","left":"50","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" ,"position":"right"},' +
-                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"10","left":"60","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg","position":"right" },' +
-                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"10","left":"70","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg","position":"right" },' +
-                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"10","left":"80","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg","position":"right" },' +
-                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"10","left":"90","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" ,"position":"right"},' +
-                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"50","left":"10","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg","position":"right" },' +
-                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"50","left":"20","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"right" },' +
-                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"50","left":"30","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"right"},' +
-                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"50","left":"40","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"right"},' +
-                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"50","left":"50","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"right"},' +
-                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"50","left":"60","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"right"},' +
-                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"50","left":"70","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" },' +
-                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"50","left":"80","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right"},' +
-                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"50","left":"90","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right" }]}';
+                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"20","left":"15","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right" },' +
+                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"27","left":"19","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right"},' +
+                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"46","left":"21.5","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg","position":"right" },' +
+                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"13","left":"44","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" ,"position":"right"},' +
+                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"18","left":"42","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" ,"position":"right"},' +
+                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"20","left":"44","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg","position":"right" },' +
+                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"21","left":"45","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg","position":"right" },' +
+                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"23","left":"46","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg","position":"right" },' +
+                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"24","left":"47","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" ,"position":"right"},' +
+                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"25","left":"53","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg","position":"right" },' +
+                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"41","left":"61.1","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"right" },' +
+                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"46.1","left":"67.9","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"right"},' +
+                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"51","left":"69","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"right"},' +
+                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"37.5","left":"71.3","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"right"},' +
+                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"32.15","left":"72.3","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"right"},' +
+                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"27.26","left":"75.73","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" },' +
+                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"67.5","left":"50.23","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right"},' +
+                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"52.4","left":"52.1","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right" }]}';
 
             obj = JSON.parse(text);
             var output = "";
@@ -154,9 +154,9 @@
                     obj.uwc[i].left + "%;'><div class='svgcontainer'><svg id='" + obj.uwc[i].id +
                     "' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 64 64' style='enable-background:new 0 0 64 64;' xml:space='preserve'><g><g><path class='st0' d='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><div style='position:relative;'><div class='card-containers' style='"+stylepos+"' id='" +
                     obj.uwc[i].id + "-card'><div class='card'><img src='./img/" + obj.uwc[i].id +
-                    ".jpg' class='uwcimg'><div style='padding:20px 0px 0px 20px'><span class='uwcheading'>" +
+                    ".jpg' class='uwcimg'><div style='padding:10px 5px 0px 0px'><span class='uwcheading'>" +
                     obj
-                    .uwc[i].name + "</span><br/><br/><i>" + obj.uwc[i].location +
+                    .uwc[i].name + "</span><br/><i>" + obj.uwc[i].location +
                     "</i></div></div></div></div></div>";
             }
 
