--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
 
 <body>
 
-    <!--Ma0 - Desktop Interactive Version-->
+    <!--Map Script Begin-->
+    <!--Map - Desktop Interactive Version-->
     <div id="map-container-desktop">
         <img src="./world.svg" alt="map" width="90%" height="auto">
         <div id="school-list">
@@ -93,17 +94,13 @@
     <div id="map-container-mobile">
         <img src="./img/map_static.png" alt="map" width="100%" height="auto">
     </div>
-
-
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            /**/
+            /*Script for Map Interactivity*/
             var shown = false;
             var name = "";
             var cardname = "";
-
             var text = '{"uwc":[' +
                 '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"20","left":"15","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right" },' +
                 '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"27","left":"19","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right"},' +
@@ -118,12 +115,11 @@
                 '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"41","left":"61.1","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"right" },' +
                 '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"46.1","left":"67.9","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"right"},' +
                 '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"51","left":"69","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"right"},' +
-                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"37.5","left":"71.3","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"right"},' +
+                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"37","left":"71.3","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"right"},' +
                 '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"32.15","left":"72.3","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"right"},' +
                 '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"27.26","left":"75.73","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" },' +
                 '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"67.5","left":"50.23","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right"},' +
                 '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"52.4","left":"52.1","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right" }]}';
-
             obj = JSON.parse(text);
             var output = "";
             var i;
@@ -134,7 +130,6 @@
                 } else {
                     stylepos = "right:20px;bottom:-40px;";
                 }
-
                 output += "<!--School--><div class='school-container' style='top:" + obj.uwc[i].top +
                     "%;left:" +
                     obj.uwc[i].left + "%;'><div class='svgcontainer'><svg id='" + obj.uwc[i].id +
@@ -146,15 +141,9 @@
                     .uwc[i].name + "</span><br/><i>" + obj.uwc[i].location +
                     "</i></div></div></div></div></div>";
             }
-
-            console.log(output);
             //render to DOM
             document.getElementById("school-list").innerHTML = output;
-
-
             $(".card-containers").hide();
-
-
             $("svg").hover(function () {
                 name = "#" + $(this).attr('id');
                 cardname = name + "-card";
@@ -164,9 +153,6 @@
                     $(cardname).hide();
                 }
             });
-
-
-
             $(".card-containers").hover(function () {
                 name = "#" + $(this).attr('id');
                 cardname = name;
@@ -176,10 +162,9 @@
                 $(cardname).fadeOut();
                 shown = false;
             });
-
-
         });
     </script>
+    <!--Map Script Ends-->
 
 </body>
 
