--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <style>
+        /*CSS for map begins*/
         #map-container-desktop,
         #map-container-mobile {
             background-color: #a2dbd8;
@@ -35,11 +36,9 @@
             overflow: auto;
             z-index: 10;
         }
-
         .card:hover {
             box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
         }
-
         .uwcimg {
             width: 100px;
             height: 100px;
@@ -57,7 +56,6 @@
         .card-containers {
             position: absolute;
             padding: 10px;
-            /*border: solid red 1px;*/
         }
         .svgcontainer {
             z-index: -1;
@@ -77,6 +75,7 @@
             stroke: #fff;
             fill-opacity: 1.0;
         }
+        /*CSS for map ends*/
     </style>
 </head>
 
