--- a/index.html
+++ b/index.html
@@ -111,24 +111,24 @@
     <script type="text/javascript">
         function render() {
             var text = '{"uwc":[' +
-                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"20","left":"15","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right" },' +
-                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"27","left":"19","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right"},' +
-                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"46","left":"21.5","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg","position":"right" },' +
-                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"13","left":"44","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" ,"position":"right"},' +
-                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"18","left":"42","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" ,"position":"right"},' +
-                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"20","left":"44","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg","position":"right" },' +
-                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"21","left":"45","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg","position":"right" },' +
-                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"23","left":"46","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg","position":"right" },' +
-                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"24","left":"47","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" ,"position":"right"},' +
-                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"25","left":"53","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg","position":"right" },' +
-                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"41","left":"61.1","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"left" },' +
-                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"46.1","left":"67.9","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"left"},' +
-                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"51","left":"69","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"left"},' +
-                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"37","left":"71.3","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"left"},' +
-                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"32.15","left":"72.3","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"left"},' +
-                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"27.26","left":"75.73","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" },' +
-                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"67.5","left":"50.23","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right"},' +
-                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"52.4","left":"52.1","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right" }]}';
+                '{"id":"Pearson","name":"Pearson College UWC","location":"Victoria, Canada","top":"20","left":"15","image_url":"/_site/data/images/news/17/home-Image%201.jpg","position":"right","link":"https://www.pearsoncollege.ca" },' +
+                '{"id":"USA","name":"UWC-USA","location":"Montezuma, New Mexico","top":"27","left":"19","image_url":"/_site/data/images/news/18/home-UWC173.jpg" ,"position":"right","link":"https://www.uwc-usa.org/"},' +
+                '{"id":"CostaRica","name":"UWC Costa Rica","location":"Santa Ana Downtown, Costa Rica","top":"46","left":"21.5","image_url":"/_site/data/images/news/32/home-Agents%20of%20Change%20projects.jpg","position":"right" ,"link":"https://www.uwccostarica.org/en/"},' +
+                '{"id":"RCN","name":"UWC Red Cross Nordic","location":"Flekke, Norway","top":"13","left":"44","image_url":"/_site/data/images/news/26/home-UWCRCN_Hiking_2.jpg" ,"position":"right","link":"https://uwcrcn.no/"},' +
+                '{"id":"Atlantic","name":"UWC Atlantic College","location":"Vale of Glamorgan, Wales, UK","top":"18","left":"42","image_url":"/_site/data/images/news/29/home-Campus-and-Students_03a.jpg" ,"position":"right","link":"https://www.atlanticcollege.org/"},' +
+                '{"id":"Maastricht","name":"UWC Maastricht","location":"Maastricht, The Netherlands","top":"20","left":"44","image_url":"/_site/data/images/news/31/home-IMG_4087.jpg","position":"right" ,"link":"https://www.uwcmaastricht.nl/"},' +
+                '{"id":"Bosch","name":"UWC Robert Bosch College","location":"Freiburg, Germany","top":"21","left":"45","image_url":"/_site/data/images/news/27/home-UWC%20Robert%20Bosch%20College_Schulerdorf.jpg","position":"right","link":"https://www.uwcrobertboschcollege.de/en/" },' +
+                '{"id":"Adriatic","name":"UWC Adriatic","location":"Duino, Italy","top":"23","left":"46","image_url":"/_site/data/images/news/28/home-Yearbook%20Picture.jpg","position":"right","link":"https://www.uwcad.it/" },' +
+                '{"id":"Mostar","name":"UWC Mostar","location":"Mostar, Bosnia and Herzegovina","top":"24","left":"47","image_url":"/_site/data/images/news/25/home-The%20school%20and%20graduation.jpg" ,"position":"right","link":"http://uwcmostar.ba/"},' +
+                '{"id":"Dilijan","name":"UWC Dilijan","location":"Dilijan, Armenia","top":"25","left":"53","image_url":"/_site/data/images/news/30/home-UWC%20Day.jpg","position":"right" ,"link":"https://uwcdilijan.org/"},' +
+                '{"id":"Mahindra","name":"UWC Mahindra College","location":"Pune, India","top":"41","left":"61.1","image_url":"/_site/data/images/news/24/home-MH2.jpg","position":"left" ,"link":"https://uwcmahindracollege.org/"},' +
+                '{"id":"Thailand","name":"UWC Thailand","location":"Phuket, Thailand","top":"46.1","left":"67.9","image_url":"/_site/data/images/news/22/home-Walk%20way.jpg" ,"position":"left","link":"https://uwcthailand.ac.th/"},' +
+                '{"id":"SEA","name":"UWC South East Asia","location":"Singapore","top":"51","left":"69","image_url":"/_site/data/images/news/20/home-UWCSEA_East%20Campus%20Plaza%20overview.jpg" ,"position":"left","link":"https://www.uwcsea.edu.sg/"},' +
+                '{"id":"LPC","name":"Li Po Chun UWC","location":"Hong Kong S.A.R, China","top":"37","left":"71.3","image_url":"/_site/data/images/news/16/home-LPCUWC1.jpg" ,"position":"left","link":"https://www.lpcuwc.edu.hk/"},' +
+                '{"id":"Changshu","name":"UWC Changshu China","location":"Changshu, China","top":"32.15","left":"72.3","image_url":"/_site/data/images/news/21/home-UWC%20Day%201%20Finals-large-10.jpg" ,"position":"left","link":"http://www.uwcchina.org/en"},' +
+                '{"id":"ISAK","name":"UWC ISAK Japan","location":"Kariuzawa, Japan","top":"27.26","left":"75.73","image_url":"/_site/data/images/news/23/home-UWCIJ_2_Castle.jpg","position":"left" ,"link":"https://uwcisak.jp/"},' +
+                '{"id":"UWCSA","name":"Waterford Kamhlaba UWC of Southern Africa","location":"Mbabane, Eswatini","top":"67.5","left":"50.23","image_url":"/_site/data/images/news/19/home-aerial%20view%20of%20WK_fullsize_Connor%20Baer,%20Leo%20Penny%20and%20Nicolai%20Davies.jpg" ,"position":"right","link":"https://www.waterford.sz/"},' +
+                '{"id":"UWCEA","name":"UWC East Africa","location":"Moshi and Arusha, Tanzania","top":"52.4","left":"52.1","image_url":"/_site/data/images/news/5031/home-View%20of%20Kili%20from%20campus%205).JPG","position":"right","link":"https://www.uwcea.org/" }]}';
             obj = JSON.parse(text);
             var output = "";
             var i;
@@ -139,7 +139,7 @@
                 } else {
                     stylepos = "right:20px;bottom:-40px;";
                 }
-                output += "<!--School--><div class='school-container' style='top:" + obj.uwc[i].top +
+                output += "<!--School--><a href='"+obj.uwc[i].link+"' target='_blank'><div class='school-container' style='top:" + obj.uwc[i].top +
                     "%;left:" +
                     obj.uwc[i].left + "%;'><div class='svgcontainer'><svg animation='" + obj.uwc[i].position +
                     "' id='" + obj.uwc[i].id +
@@ -149,7 +149,7 @@
                     ".jpg' class='uwcimg'><div style='padding:10px 5px 0px 0px'><span class='uwcheading'>" +
                     obj
                     .uwc[i].name + "</span><br/><i>" + obj.uwc[i].location +
-                    "</i></div></div></div></div></div>";
+                    "</i></div></div></div></div></div></a>";
             }
             //render to DOM
             document.getElementById("school-list").innerHTML = output;
