--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin-left: auto;
             margin-right: auto;
             position: relative;
-            
+
         }
 
         #map-container-mobile {
@@ -32,11 +32,12 @@
             position: relative;
             box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
             transition: 0.3s;
-            width: 40%;
             font-family: sans-serif;
             background-color: #fff;
-            border: solid #009B90 2px;
-            width: 360px;
+            border: solid #009B90 3px;
+            width: 300px;
+            height: 100px;
+            padding: 10px;
             color: #777;
             overflow: auto;
             z-index: 10;
@@ -52,16 +53,19 @@
             height: 100px;
             float: left;
             margin-right: 10px;
-            border-right: solid #009B90 2px;
+            border-radius: 50%;
         }
 
+        
+
         .uwcheading {
-            font-size: 1.3em;
+            font-size: 1.05em;
             color: #009B90;
         }
-        .uwclocation{
-            color:#999;
-            font-size:0.9em;
+
+        .uwclocation {
+            color: #999;
+            font-size: 0.9em;
         }
 
         .school-container {
@@ -143,17 +147,18 @@
                 } else {
                     stylepos = "right:20px;bottom:-40px;";
                 }
-                output += "<!--School--><a href='"+obj.uwc[i].link+"' target='_blank'><div class='school-container' style='top:" + obj.uwc[i].top +
+                output += "<!--School--><a href='" + obj.uwc[i].link +
+                    "' target='_blank'><div class='school-container' style='top:" + obj.uwc[i].top +
                     "%;left:" +
                     obj.uwc[i].left + "%;'><div class='svgcontainer'><svg animation='" + obj.uwc[i].position +
                     "' id='" + obj.uwc[i].id +
                     "' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' x='0px' y='0px' viewBox='0 0 64 64' style='enable-background:new 0 0 64 64;' xml:space='preserve'><g><g><path class='st0' d='M51.7,23.5c0-11-8.8-20-19.7-20s-19.7,9-19.7,20C12.3,40.3,32,60.5,32,60.5S51.7,40.3,51.7,23.5zM22.7,22.7c0-5.2,4.2-9.3,9.3-9.3s9.3,4.2,9.3,9.3S37.2,32,32,32S22.7,27.8,22.7,22.7z'/></g></g></svg></div><div style='position:relative;'><div class='card-containers' style='" +
                     stylepos + "' id='" +
-                    obj.uwc[i].id + "-card'><div class='card'><img src='./img/" + obj.uwc[i].id +
+                    obj.uwc[i].id + "-card'><div class='card'><div><img src='./img/" + obj.uwc[i].id +
                     ".jpg' class='uwcimg'><div style='padding:10px 5px 0px 0px'><span class='uwcheading'>" +
                     obj
                     .uwc[i].name + "</span><br/><i class='uwclocation'>" + obj.uwc[i].location +
-                    "</i></div></div></div></div></div></a>";
+                    "</i></div></div></div></div></div></div></a>";
             }
             //render to DOM
             document.getElementById("school-list").innerHTML = output;
@@ -187,6 +192,7 @@
                 shown = true;
             }, function () {
                 $(cardname).fadeOut();
+                $(".card-containers").fadeOut();
                 shown = false;
             });
         });
