--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
         #map-container-mobile {
             background-color: #fff;
             width: 98vw;
+            height: 44.1vw;
             margin-left: auto;
             margin-right: auto;
             position: relative;
-
+            /*border: solid 1px red;*/
         }
 
         #map-container-mobile {
