--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             margin-left: auto;
             margin-right: auto;
             position: relative;
-            /*border: solid 1px red;*/
+            border: solid 1px red;
         }
 
         #map-container-mobile {
