--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         /*CSS for map begins*/
         #map-container-desktop,
         #map-container-mobile {
-            background-color: #fff;
+            background-color: #b2dfdb;
             width: 98vw;
             height: 44.1vw;
             margin-left: auto;
